--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -6480,3 +6480,104 @@ h2.job-post-success {
 .logohome img{
 	width:100%;
 }
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+/* 
+.carousel {
+	margin-bottom: 60px;
+  } */
+  
+  .carousel-control {
+	top: 76%;
+  }
+  
+  .carousel-caption {
+	z-index: 10;
+  }
+  
+  .carousel .item {
+	height: 500px;
+	background-color:#bbb;
+	overflow:hidden;
+  }
+  .carousel img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	height: 500px;
+  }
+  
+  #searchForm {
+	  position:absolute;
+		top:40%;
+		width: 100%;
+    max-width: 1170px;
+  }
+  .inline-search-form form {
+	background: rgba(0,0,0,.65);
+    padding: 10px 10px 35px 10px;
+    margin-bottom: 20px;
+    border-radius: 3px;
+}
+.inline-search-form h3{
+	color: #fff;
+}
+.inline-search-form form .form-group {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 auto;
+    flex: 1 auto;
+    margin-right: 10px;
+}
+.inline-search-form form .form-group .form-group-inner {
+    position: relative;
+}
+.inline-search-form form .button {
+    font-size: 18px;
+    border-radius: 4px;
+    padding: 10px 16px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid;
+}
+.inline-search-form .keywords.flex {
+    -ms-flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+	flex-flow: row wrap;
+	top: 67%;
+	position: absolute;
+}
+.inline-search-form .keywords h4 {
+    margin: 0;
+    margin-right: 15px;
+    -webkit-align-self: flex-start;
+    -ms-flex-item-align: start;
+    align-self: flex-start;
+}
+.inline-search-form .keywords .button {
+    margin-right: 7px;
+    border-radius: 4px;
+    padding: 6px 10px;
+    text-transform: none;
+    font-family: 'Lato', sans-serif;
+    font-size: 12px;
+    line-height: 13px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+  /* RESPONSIVE CSS
+  -------------------------------------------------- */
+  @media (max-width: 768px) {
+  
+	.carousel-inner>.item>img, .carousel-inner>.item>a>img {
+		max-width:inherit;
+	}
+  
+	.carousel-caption p {
+	  margin-bottom: 20px;
+	  font-size: 21px;
+	  line-height: 1.4;
+	}
+  }
