--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -1552,7 +1552,7 @@ li.active{
 	-ms-flex: 0 20%;
 	float: left;;
 	padding: 30px 0px;
-	
+	min-height: 180px;
 	width: 20%;
 	cursor: pointer;
 	-webkit-transition: .3s;
